# processing-poc

./: .gitignore  README.md  build.gradle  settings.gradle
controller/: build.gradle
controller/.devcontainer/: Dockerfile
controller/src/main/resources/: application-dev.properties  application.properties
echo-merger/: build.gradle
echo-merger/src/main/resources/: application.properties
echo-orchestrator/: build.gradle
echo-worker/: build.gradle
echo-worker-cpp/: CMakeLists.txt  README.MD  build.gradle
echo-worker-cpp/src/: app.cpp  messaging.cpp  messaging.h
echo-worker-cpp/src/main/cpp/: app.cpp
echo-worker-cpp/src/main/headers/: app.h
echo-worker-cpp/src/test/cpp/: app_test.cpp
echo-worker-cpp/test/: app_test.cpp
echo-worker/.devcontainer/: devcontainer.json
k8s/dev/: basic-auth  controller.yaml  echo-merger.yaml  echo-orchestrator.yaml  echo-worker.yaml  ingress.yaml  postgres.yaml  tracker.yaml  ui-admin.yaml  zipkin.yaml
k8s/minikube/: controller.yaml  echo-merger.yaml  echo-orchestrator.yaml  echo-worker.yaml  ingress.yaml  postgres.yaml  rabbitmq.yaml  tracker.yaml  ui-admin.yaml  volume.yaml  zipkin.yaml
lib-data/: build.gradle
lib-geo/: build.gradle
lib-orchestrator/: build.gradle
test-database/: build.gradle
test-gdal/: build.gradle
tracker/: build.gradle
ui-admin/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
ui-admin/src/: index.html
ui-admin/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
ui-admin/src/environments/: environment.prod.ts  environment.ts
(+101 files in other folders)
